istio/IncidentDeploymentV2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2022-05-15 - 15:03:29 +0000
  labels:
    app: antennas-incident
    version: v2
  name: antennas-incident-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antennas-incident
      version: v2
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2022-05-15 - 15:03:29 +0000
        sidecar.istio.io/inject: "true"
      labels:
        app: antennas-incident
        version: v2
    spec:
      containers:
        - env:
            - name: avengers
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/sebastienblanc0/antennas-incident:v2
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: antennas-incident
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
