istio/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: antennas-incident
spec:
  hosts:
  - "*"
  gateways:
  - incident-gateway
  http:
   - match:
     - uri:
        prefix: /incident
     rewrite:
      uri: /
     route:
      - destination:
          host: antennas-incident
          subset: version-v1
        weight: 75
      - destination:
          host: antennas-incident
          subset: version-v2
        weight: 25
---
